[package]
name = "wasm-aeslib"
description = "wasm aes128 crypto lib"
version = "0.1.8"
authors = ["Eric <wkf39988@gmail.com"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.7.0"
block-modes = "0.6.1"

wee_alloc = { version = "0.4.2", optional = true }
