[package]
name = "wasm-aeslib"
description = "wasm aes128 crypto lib"
version = "0.1.8"
authors = ["Eric <wkf39988@gmail.com"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
aes = "0.8.3"
cfb-mode = "0.8.2"
hex-literal = "0.4.1" 
wasm-bindgen = "0.2"