[package]
name = "wasm-aeslib"
description = "wasm aes128 crypto lib"
version = "0.1.8"
authors = ["Eric <wkf39988@gmail.com"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.4"
getrandom = { version = "0.2", features = ["js"] }

[build]
target = "wasm32-unknown-unknown"

[profile.release]
opt-level = "z"
lto = true